fix (#378): missions intro section styling and spacing

--- a/src/pages/Missions.module.css
+++ b/src/pages/Missions.module.css
@@ -1,9 +1,18 @@
 .intro {
-  padding: 100px 1.5rem 0px;
+  padding-top: 50px;
+  padding-bottom: 25px;
+}
+
+@media screen and (min-width: 600px) {
+  .intro {
+    padding-top: 75px;
+    padding-bottom: 50px;
+  }
 }
 
 @media screen and (min-width: 900px) {
   .intro {
-    padding: 150px 0 0 0;
+    padding-top: 150px;
+    padding-bottom: 50px;
   }
 }
